aspnetcore/performance/response-compression/samples/2.x/README.md
# <a name="response-compression-sample-application-aspnet-core-2x"></a><span data-ttu-id="e85b7-101">Yanıt sıkıştırma örnek uygulaması (ASP.NET Core 2.x)</span><span class="sxs-lookup"><span data-stu-id="e85b7-101">Response compression sample application (ASP.NET Core 2.x)</span></span>

<span data-ttu-id="e85b7-102">Bu örnek kullanımını ASP.NET Core 2.x yanıt sıkıştırma ara yazılımı HTTP yanıtları sıkıştırma.</span><span class="sxs-lookup"><span data-stu-id="e85b7-102">This sample illustrates the use of ASP.NET Core 2.x Response Compression Middleware to compress HTTP responses.</span></span> <span data-ttu-id="e85b7-103">Örnek Gzip Brotli ve metin ve resim yanıtları için özel sıkıştırmasını sağlayıcıları gösterir ve sıkıştırma için MIME türü ekleme işlemi gösterilmektedir.</span><span class="sxs-lookup"><span data-stu-id="e85b7-103">The sample demonstrates Gzip, Brotli, and custom compression providers for text and image responses and shows how to add a MIME type for compression.</span></span> <span data-ttu-id="e85b7-104">ASP.NET Core 1.x örnek için bkz: [yanıt sıkıştırma örnek uygulaması (ASP.NET Core 1.x)](https://github.com/aspnet/AspNetCore.Docs/tree/master/aspnetcore/performance/response-compression/samples/1.x).</span><span class="sxs-lookup"><span data-stu-id="e85b7-104">For the ASP.NET Core 1.x sample, see [Response compression sample application (ASP.NET Core 1.x)](https://github.com/aspnet/AspNetCore.Docs/tree/master/aspnetcore/performance/response-compression/samples/1.x).</span></span>

## <a name="examples-in-this-sample"></a><span data-ttu-id="e85b7-105">Bu örnekte örnekleri</span><span class="sxs-lookup"><span data-stu-id="e85b7-105">Examples in this sample</span></span>

* `BrotliCompressionProvider`
  * `text/plain`
    * <span data-ttu-id="e85b7-106">**/** -~ 979 bayt sıkıştıran Lorem Ipsum metin dosyası yanıtında 2,044 bayt.</span><span class="sxs-lookup"><span data-stu-id="e85b7-106">**/** - Lorem Ipsum text file response at 2,044 bytes that compresses to ~979 bytes.</span></span>
    * <span data-ttu-id="e85b7-107">**/testfile1kb.txt** -yaklaşık 36 bayt sıkıştırır metin dosyası yanıt 1.033 bayt.</span><span class="sxs-lookup"><span data-stu-id="e85b7-107">**/testfile1kb.txt** - Text file response at 1,033 bytes that compresses to ~36 bytes.</span></span>
    * <span data-ttu-id="e85b7-108">**/ trickle** -1 saniyelik aralıklarla tek karakter olarak verilen yanıt.</span><span class="sxs-lookup"><span data-stu-id="e85b7-108">**/trickle** - Response issued as single characters at 1 second intervals.</span></span>
* `GzipCompressionProvider`
  * `text/plain`
    * <span data-ttu-id="e85b7-109">**/** -~ 927 bayt sıkıştıran Lorem Ipsum metin dosyası yanıtında 2,044 bayt.</span><span class="sxs-lookup"><span data-stu-id="e85b7-109">**/** - Lorem Ipsum text file response at 2,044 bytes that compresses to ~927 bytes.</span></span>
    * <span data-ttu-id="e85b7-110">**/testfile1kb.txt** -yaklaşık 47 bayt sıkıştırır metin dosyası yanıt 1.033 bayt.</span><span class="sxs-lookup"><span data-stu-id="e85b7-110">**/testfile1kb.txt** - Text file response at 1,033 bytes that compresses to ~47 bytes.</span></span>
    * <span data-ttu-id="e85b7-111">**/ trickle** -1 saniyelik aralıklarla tek karakter olarak verilen yanıt.</span><span class="sxs-lookup"><span data-stu-id="e85b7-111">**/trickle** - Response issued as single characters at 1 second intervals.</span></span>
  * `image/svg+xml`
    * <span data-ttu-id="e85b7-112">**/Banner.SVG** -~ 4,459 bayt sıkıştıran bir ölçeklenebilir vektör grafiği (SVG) görüntü yanıt 9,707 bayt.</span><span class="sxs-lookup"><span data-stu-id="e85b7-112">**/banner.svg** - A Scalable Vector Graphics (SVG) image response at 9,707 bytes that compresses to ~4,459 bytes.</span></span>
* `CustomCompressionProvider`<br><span data-ttu-id="e85b7-113">Ara yazılım ile kullanmak için özel sıkıştırma sağlayıcıyı uygulama işlemi gösterilmektedir.</span><span class="sxs-lookup"><span data-stu-id="e85b7-113">Shows how to implement a custom compression provider for use with the middleware.</span></span>

<span data-ttu-id="e85b7-114">İstek zaman içerir `Accept-Encoding` ara yazılım başlığı ve yanıt sıkıştırma başarılı olur, otomatik olarak ekler bir `Vary: Accept-Encoding` yanıt üst bilgisi.</span><span class="sxs-lookup"><span data-stu-id="e85b7-114">When the request includes the `Accept-Encoding` header and response compression is successful, the middleware automatically adds a `Vary: Accept-Encoding` header to the response.</span></span> <span data-ttu-id="e85b7-115">`Vary` Üstbilgi bildirir alternatif değerlerine dayalı yanıt birden çok kopyasını korumak için önbellekleri `Accept-Encoding`, böylece hem bir sıkıştırılmış (Gzip veya Brotli) ve sıkıştırılmamış, önbelleklerinde depolanan, aşağıdakilerden birini yapabilirsiniz sistemlerine kabul etmek için sıkıştırılmış ve sıkıştırılmamış yanıt.</span><span class="sxs-lookup"><span data-stu-id="e85b7-115">The `Vary` header instructs caches to maintain multiple copies of the response based on alternative values of `Accept-Encoding`, so both a compressed (Gzip or Brotli) and uncompressed version are stored in caches for systems that can either accept the compressed or the uncompressed response.</span></span>

## <a name="use-the-sample"></a><span data-ttu-id="e85b7-116">Kullanım örneği</span><span class="sxs-lookup"><span data-stu-id="e85b7-116">Use the sample</span></span>

1. <span data-ttu-id="e85b7-117">Bir istek kullanarak olun [Fiddler](https://www.telerik.com/fiddler), [Firebug](https://getfirebug.com/), veya [Postman](https://www.getpostman.com/) olmadan uygulamasına bir `Accept-Encoding` üstbilgi ve Not yanıt yükünde yanıt boyutu ve yanıt üstbilgileri.</span><span class="sxs-lookup"><span data-stu-id="e85b7-117">Make a request using [Fiddler](https://www.telerik.com/fiddler), [Firebug](https://getfirebug.com/), or [Postman](https://www.getpostman.com/) to the application without an `Accept-Encoding` header and note the response payload, response size, and response headers.</span></span>
1. <span data-ttu-id="e85b7-118">Ekleme bir `Accept-Encoding: br` veya `Accept-Encoding: gzip` üstbilgisi ve sıkıştırılmış yanıt boyutu ve yanıt üst bilgilerini not edin.</span><span class="sxs-lookup"><span data-stu-id="e85b7-118">Add an `Accept-Encoding: br` or `Accept-Encoding: gzip` header and note the compressed response size and response headers.</span></span> <span data-ttu-id="e85b7-119">Yanıt boyutu bırakır ve `Content-Encoding` yanıt üst bilgisi belirten ya da Gzip ile bu sıkıştırma ara yazılımı tarafından eklenir veya Brotli oluştu.</span><span class="sxs-lookup"><span data-stu-id="e85b7-119">The response size drops, and the `Content-Encoding` response header is included by the middleware indicating that compression with either Gzip or Brotli occurred.</span></span> <span data-ttu-id="e85b7-120">Yanıt gövdesi için Lorem Ipsum baktığınızda veya **testfile1kb.txt** yanıt, gördüğünüz sıkıştırılmış ve okunamaz metindir.</span><span class="sxs-lookup"><span data-stu-id="e85b7-120">When you look at the response body for the Lorem Ipsum or **testfile1kb.txt** response, you see that the text is compressed and unreadable.</span></span>
1. <span data-ttu-id="e85b7-121">Ekleme bir `Accept-Encoding: mycustomcompression` üstbilgi ve yanıt üst bilgilerini not edin.</span><span class="sxs-lookup"><span data-stu-id="e85b7-121">Add an `Accept-Encoding: mycustomcompression` header and note the response headers.</span></span> <span data-ttu-id="e85b7-122">`CustomCompressionProvider` Gerçekten yanıt sıkıştırma olmayan boş bir uygulama olduğu halde için özel sıkıştırma stream sarmalayıcı oluşturabilirsiniz `CreateStream()` yöntemi.</span><span class="sxs-lookup"><span data-stu-id="e85b7-122">The `CustomCompressionProvider` is an empty implementation that doesn't actually compress the response, but you can create a custom compression stream wrapper for the `CreateStream()` method.</span></span>
